// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package grpctest;

import "google/protobuf/timestamp.proto";

// The greeting service definition.
service UserRegistration {
  // Sends a greeting
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserReply) {}
}

// The request message containing the user's name.
message RegisterUserRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  google.protobuf.Timestamp birthday = 4;
  string phone_number = 5;
  SecurityQuestion security_question = 6;
  
  message SecurityQuestion {
    string question = 1;
    string answer = 2;
  }
}

// The response message containing the greetings
message RegisterUserReply {
  string email = 1;
  string username = 2;
}
